Scale layers and embeddings

--- a/configs/NCI109/gcn/scaled_embedding_constant_layers.yml
+++ b/configs/NCI109/gcn/scaled_embedding_constant_layers.yml
@@ -7,4 +7,5 @@ runs: 1
 epochs: 200
 seed: 12344
 scheduler: plateau
-gnn_emb_dim: 260
+gnn_emb_dim: 310 # For ~500k total parameters
+#gnn_emb_dim: 400 # For ~800k total parameters
