Configs for ablation study 1: 500k params

--- a/configs/NCI109/gcn/scaled_layers_constant_embedding.yml
+++ b/configs/NCI109/gcn/scaled_layers_constant_embedding.yml
@@ -7,4 +7,5 @@ runs: 1
 epochs: 200
 seed: 12344
 scheduler: plateau
-gnn_num_layer: 20
+gnn_num_layer: 30 # For ~500k total params
+#gnn_num_layer: 45 # For ~800k total params
